# SaprotHub

./: .gitignore  LICENSE  README.md  SaprotHub.ipynb  pyproject.toml  requirements.txt  requirements_py312.txt  saprot-0.4.7-py3-none-any.whl  task_list.md  tutorial.md
colab/: ColabESM3.ipynb  ColabESMC.ipynb  ColabPMI_Protein_Molecule_Interaction_Prediction_Platform.ipynb  ColabProSST.ipynb  ColabProSST_Acceptance.ipynb  ColabProTrek.ipynb  ColabProtT5.ipynb  ColabSaProt_dev.ipynb  ColabSaProt_v2_3.ipynb  ColabSeprot.ipynb  ESM-Play-V3.ipynb  ESM-Play-VC .ipynb  ESM-Play-VC.ipynb  SaprotHub.ipynb  SaprotHub_v1.ipynb  SaprotHub_v2.ipynb  SaprotHub_v2_beta.ipynb  guidance.ipynb  not_use_only_for_dev.ipynb
hub_demo/: iframe_proxy.py  loop_retrieve_cards.py  run.py
local_server/: README.md  _reprs.py  data_table.py  install.sh  jupyter_notebook_config.py  requirements.txt  run.sh
saprot/: __init__.py
saprot/config/: config_dict.py  default.yaml
saprot/data/: af2_confidence.py  data_transform.py  parse.py  (+10 more)
search_engine/: loop_retrieve_cards.py  utils.py
tests/: test_colab_prosst_acceptance.py  test_colab_prosst_colab.py
upload_files/: [EXAMPLE]Multiple_PDB_Structures.csv  [EXAMPLE]Multiple_SA_Sequences.csv  [EXAMPLE]Multiple_UniProt_IDs.csv  [EXAMPLE]Multiple_pairs_of_AA_Sequences.csv  [EXAMPLE]Multiple_pairs_of_PDB_Structures.csv  [EXAMPLE]Mutational_Effect_Prediction.csv  [EXAMPLE][AminoAcidClassification-3Categories]Multiple_AA_Sequences.csv  [EXAMPLE][Classification-2Categories]Multiple_AA_Sequences.csv  [EXAMPLE][Regression]Multiple_AA_Sequences.csv
(+179 files in other folders)
